NetBSD Problem Report #41185

From martin@duskware.de  Fri Apr 10 19:18:21 2009
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 789A063BC38
	for <gnats-bugs@gnats.NetBSD.org>; Fri, 10 Apr 2009 19:18:21 +0000 (UTC)
Message-Id: <20090410191819.194D633A81@mail.duskware.de>
Date: Fri, 10 Apr 2009 21:18:14 +0200 (CEST)
From: martin
Reply-To: martin
To: gnats-bugs@gnats.NetBSD.org
Subject: mknod broken
X-Send-Pr-Version: 3.95

>Number:         41185
>Category:       port-hp700
>Synopsis:       mknod broken
>Confidential:   no
>Severity:       critical
>Priority:       high
>Responsible:    port-hp700-maintainer
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Fri Apr 10 19:20:00 +0000 2009
>Closed-Date:    Tue May 05 06:38:49 +0000 2009
>Last-Modified:  Tue May 05 06:38:49 +0000 2009
>Originator:     Martin Husemann
>Release:        NetBSD 5.99.10
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD moondance.duskware.de 5.99.10 NetBSD 5.99.10 (GENERIC) #0: Fri Apr 10 12:12:17 CEST 2009 martin@night-porter.duskware.de:/usr/src/sys/arch/hp700/compile/GENERIC hp700
Architecture: hppa
Machine: hp700
>Description:

mknod(2) is broken on -current, but works fine in netbsd-5. The device 
major/minor is set to 0/0, no matter what args you pass.

# /sbin/mknod /tmp/demo c 10 4; ls -l /tmp/demo
crw-r--r--  1 root  wheel  0, 0 Apr 10 21:12 /tmp/demo
#

>How-To-Repeat:
See above

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: Nick Hudson <skrll@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/41185 CVS commit: src/sys/arch/hppa/hppa
Date: Sat, 11 Apr 2009 09:49:24 +0000

 Module Name:	src
 Committed By:	skrll
 Date:		Sat Apr 11 09:49:24 UTC 2009

 Modified Files:
 	src/sys/arch/hppa/hppa: trap.c

 Log Message:
 Fixup two more syscalls with 64-bit args.

 Remove reference to script that is supposed to do this automatically - I
 don't have it.

 Fixes PR/41185.


 To generate a diff of this commit:
 cvs rdiff -u -r1.57 -r1.58 src/sys/arch/hppa/hppa/trap.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: skrll@NetBSD.org
State-Changed-When: Tue, 05 May 2009 06:38:49 +0000
State-Changed-Why:
Problem fixed. Thanks for the PR. Nick.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.