Fixup two more syscalls with 64-bit args.

Remove reference to script that is supposed to do this automatically - I
don't have it.

Fixes PR/41185.